--- a/HW-06_ArtificialNeuralNetwork.ipynb
+++ b/HW-06_ArtificialNeuralNetwork.ipynb
@@ -120,7 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font size=8 color=\"#009600\">&#9998;</font> Do This - Erase the contents of this cell and replace it with your answer to the above question!  (double-click on this text to edit this cell, and hit shift+enter to save the text)"
+    "<font size=8 color=\"#009600\">&#9998;</font> Can we train a NN to test for diabetes?"
    ]
   },
   {
@@ -134,7 +134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font size=8 color=\"#009600\">&#9998;</font> Do This - Erase the contents of this cell and replace it with your answer to the above question!  (double-click on this text to edit this cell, and hit shift+enter to save the text)"
+    "<font size=8 color=\"#009600\">&#9998;</font> Can a NN be trained to accurately predict diabetes with fewer measurements?"
    ]
   },
   {
@@ -333,13 +333,208 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'moduleTNC'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-8-9806ef0028a0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m    102\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    103\u001b[0m \u001b[1;31m## ----------------------- Part 6 ---------------------------- ##\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 104\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mscipy\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0moptimize\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    105\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    106\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Roaming\\Python\\Python36\\site-packages\\scipy\\optimize\\__init__.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m    239\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    240\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[1;33m.\u001b[0m\u001b[0moptimize\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[1;33m*\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 241\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[1;33m.\u001b[0m\u001b[0m_minimize\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[1;33m*\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    242\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[1;33m.\u001b[0m\u001b[0m_root\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[1;33m*\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    243\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[1;33m.\u001b[0m\u001b[0mminpack\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[1;33m*\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Roaming\\Python\\Python36\\site-packages\\scipy\\optimize\\_minimize.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     31\u001b[0m \u001b[1;31m# constrained minimization\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     32\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[1;33m.\u001b[0m\u001b[0mlbfgsb\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0m_minimize_lbfgsb\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 33\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[1;33m.\u001b[0m\u001b[0mtnc\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0m_minimize_tnc\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     34\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[1;33m.\u001b[0m\u001b[0mcobyla\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0m_minimize_cobyla\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     35\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[1;33m.\u001b[0m\u001b[0mslsqp\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0m_minimize_slsqp\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Roaming\\Python\\Python36\\site-packages\\scipy\\optimize\\tnc.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     35\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0m__future__\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mdivision\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mprint_function\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mabsolute_import\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     36\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 37\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mscipy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moptimize\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mmoduleTNC\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mapprox_fprime\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     38\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[1;33m.\u001b[0m\u001b[0moptimize\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mMemoizeJac\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mOptimizeResult\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_check_unknown_options\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     39\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0minf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0marray\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mzeros\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0masfarray\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'moduleTNC'"
+     ]
+    }
+   ],
    "source": [
-    "## Put code here to visualize your learning rate\n"
+    "# %load partSix.py\n",
+    "# Neural Networks Demystified\n",
+    "# Part 6: Training\n",
+    "#\n",
+    "# Supporting code for short YouTube series on artificial neural networks.\n",
+    "#\n",
+    "# Stephen Welch\n",
+    "# @stephencwelch\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "## ----------------------- Part 5 ---------------------------- ##\n",
+    "\n",
+    "class Neural_Network(object):\n",
+    "    def __init__(self, inputLayerSize = 2, outputLayerSize = 1, hiddenLayerSize = 3):        \n",
+    "        #Define Hyperparameters\n",
+    "        self.inputLayerSize = inputLayerSize\n",
+    "        self.outputLayerSize = outputLayerSize\n",
+    "        self.hiddenLayerSize = hiddenLayerSize\n",
+    "        \n",
+    "        #Weights (parameters)\n",
+    "        self.W1 = np.random.randn(self.inputLayerSize,self.hiddenLayerSize)\n",
+    "        self.W2 = np.random.randn(self.hiddenLayerSize,self.outputLayerSize)\n",
+    "        \n",
+    "    def forward(self, X):\n",
+    "        #Propogate inputs though network\n",
+    "        self.z2 = np.dot(X, self.W1)\n",
+    "        self.a2 = self.sigmoid(self.z2)\n",
+    "        self.z3 = np.dot(self.a2, self.W2)\n",
+    "        yHat = self.sigmoid(self.z3) \n",
+    "        return yHat\n",
+    "        \n",
+    "    def sigmoid(self, z):\n",
+    "        #Apply sigmoid activation function to scalar, vector, or matrix\n",
+    "        return 1/(1+np.exp(-z))\n",
+    "    \n",
+    "    def sigmoidPrime(self,z):\n",
+    "        #Gradient of sigmoid\n",
+    "        return np.exp(-z)/((1+np.exp(-z))**2)\n",
+    "    \n",
+    "    def costFunction(self, X, y):\n",
+    "        #Compute cost for given X,y, use weights already stored in class.\n",
+    "        self.yHat = self.forward(X)\n",
+    "        J = 0.5*sum((y-self.yHat)**2)\n",
+    "        return J\n",
+    "        \n",
+    "    def costFunctionPrime(self, X, y):\n",
+    "        #Compute derivative with respect to W and W2 for a given X and y:\n",
+    "        self.yHat = self.forward(X)\n",
+    "        \n",
+    "        delta3 = np.multiply(-(y-self.yHat), self.sigmoidPrime(self.z3))\n",
+    "        dJdW2 = np.dot(self.a2.T, delta3)\n",
+    "        \n",
+    "        delta2 = np.dot(delta3, self.W2.T)*self.sigmoidPrime(self.z2)\n",
+    "        dJdW1 = np.dot(X.T, delta2)  \n",
+    "        \n",
+    "        return dJdW1, dJdW2\n",
+    "    \n",
+    "    #Helper Functions for interacting with other classes:\n",
+    "    def getParams(self):\n",
+    "        #Get W1 and W2 unrolled into vector:\n",
+    "        params = np.concatenate((self.W1.ravel(), self.W2.ravel()))\n",
+    "        return params\n",
+    "    \n",
+    "    def setParams(self, params):\n",
+    "        #Set W1 and W2 using single paramater vector.\n",
+    "        W1_start = 0\n",
+    "        W1_end = self.hiddenLayerSize * self.inputLayerSize\n",
+    "        self.W1 = np.reshape(params[W1_start:W1_end], (self.inputLayerSize , self.hiddenLayerSize))\n",
+    "        W2_end = W1_end + self.hiddenLayerSize*self.outputLayerSize\n",
+    "        self.W2 = np.reshape(params[W1_end:W2_end], (self.hiddenLayerSize, self.outputLayerSize))\n",
+    "        \n",
+    "    def computeGradients(self, X, y):\n",
+    "        dJdW1, dJdW2 = self.costFunctionPrime(X, y)\n",
+    "        return np.concatenate((dJdW1.ravel(), dJdW2.ravel()))\n",
+    "\n",
+    "def computeNumericalGradient(N, X, y):\n",
+    "        paramsInitial = N.getParams()\n",
+    "        numgrad = np.zeros(paramsInitial.shape)\n",
+    "        perturb = np.zeros(paramsInitial.shape)\n",
+    "        e = 1e-4\n",
+    "\n",
+    "        for p in range(len(paramsInitial)):\n",
+    "            #Set perturbation vector\n",
+    "            perturb[p] = e\n",
+    "            N.setParams(paramsInitial + perturb)\n",
+    "            loss2 = N.costFunction(X, y)\n",
+    "            \n",
+    "            N.setParams(paramsInitial - perturb)\n",
+    "            loss1 = N.costFunction(X, y)\n",
+    "\n",
+    "            #Compute Numerical Gradient\n",
+    "            numgrad[p] = (loss2 - loss1) / (2*e)\n",
+    "\n",
+    "            #Return the value we changed to zero:\n",
+    "            perturb[p] = 0\n",
+    "            \n",
+    "        #Return Params to original value:\n",
+    "        N.setParams(paramsInitial)\n",
+    "\n",
+    "        return numgrad \n",
+    "        \n",
+    "## ----------------------- Part 6 ---------------------------- ##\n",
+    "from scipy import optimize\n",
+    "\n",
+    "\n",
+    "class trainer(object):\n",
+    "    def __init__(self, N):\n",
+    "        #Make Local reference to network:\n",
+    "        self.N = N\n",
+    "        \n",
+    "    def callbackF(self, params):\n",
+    "        self.N.setParams(params)\n",
+    "        self.J.append(self.N.costFunction(self.X, self.y))   \n",
+    "        \n",
+    "    def costFunctionWrapper(self, params, X, y):\n",
+    "        self.N.setParams(params)\n",
+    "        cost = self.N.costFunction(X, y)\n",
+    "        grad = self.N.computeGradients(X,y)\n",
+    "        return cost, grad\n",
+    "        \n",
+    "    def train(self, X, y):\n",
+    "        #Make an internal variable for the callback function:\n",
+    "        self.X = X\n",
+    "        self.y = y\n",
+    "\n",
+    "        #Make empty list to store costs:\n",
+    "        self.J = []\n",
+    "        \n",
+    "        params0 = self.N.getParams()\n",
+    "\n",
+    "        options = {'maxiter': 200, 'disp' : True}\n",
+    "        _res = optimize.minimize(self.costFunctionWrapper, params0, jac=True, method='BFGS', \\\n",
+    "                                 args=(X, y), options=options, callback=self.callbackF)\n",
+    "\n",
+    "        self.N.setParams(_res.x)\n",
+    "        self.optimizationResults = _res\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'train_labels' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-9-1a14568f7cdb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mtrain_labels\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'train_labels' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "new = np.reshape(train_labels, (442,1))\n",
+    "train_labels = new/10\n",
+    "train_labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'train_vectors' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-10-d9bae9d43cd3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtrain_vectors\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtrain_vectors\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mtrain_vectors\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mtrain_vectors\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'train_vectors' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "train_vectors = train_vectors/train_vectors.max()\n",
+    "train_vectors"
    ]
   },
   {
@@ -360,7 +555,9 @@
    },
    "outputs": [],
    "source": [
-    "## Put your integrated code here\n"
+    "NN = Neural_Network(10, 1, 20)\n",
+    "T = trainer(NN)\n",
+    "T.train(train_vectors, train_labels)"
    ]
   },
   {
@@ -389,11 +586,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<iframe \n",
+       "\tsrc=\"https://goo.gl/forms/Y2112O1emrVdjZ9u2\" \n",
+       "\twidth=\"80%\" \n",
+       "\theight=\"800px\" \n",
+       "\tframeborder=\"0\" \n",
+       "\tmarginheight=\"0\" \n",
+       "\tmarginwidth=\"0\">\n",
+       "\tLoading...\n",
+       "</iframe>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from IPython.display import HTML\n",
     "HTML(\n",
